sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:9: error: not found: value getValeurs
  var magouille1=getValeurs(0)
                 ^AlgBubbleSort1:10: error: not found: value getValeurs
  var magouille2=getValeurs(1)
                 ^AlgBubbleSort1:11: error: not found: value getValeurs
  var magouille3=getValeurs(2)
                 ^AlgBubbleSort1:12: error: not found: value getValeurs
  var magouille4=getValeurs(3)
                 ^AlgBubbleSort1:13: error: not found: value getValeurs
  var magouille5=getValeurs(4)
                 ^AlgBubbleSort1:14: error: not found: value getValeurs
  var magouille6=getValeurs(5)
                 ^