sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var longueur=0
  longueur=getNombreValeurs()-2
  var i=0
  var k=0
  var pos1=0
  var pos2=0
  var magouille1=getValeurs(0)
  var magouille2=getValeurs(1)
  var magouille3=getValeurs(2)
  var magouille4=getValeurs(3)
  var magouille5=getValeurs(4)
  var magouille6=getValeurs(5)
  while (k!=longueur){
    for(i<- 0 to longueur-k){
      pos1=i
      pos2=i+1
      if (plusPetit(pos2,pos1)){
        echange(pos1,pos2)
      }
  	}
    k+=1
  }  
}